@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed a name conflict with new (VC 2008 Express) winsock2.h
+	  versions and another conflict that produced compile errors
+	  with VC 2008 (STR #2301).
 	- Widgets now remove stale entries from the default callback
 	  queue when they are deleted (STR #2302)
 	- Moved OS X code base to the more moder Cocoa toolkit thanks
